[package]
name = "rustls-cng"
version = "0.6.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Windows CNG API bridge for rustls"
license = "MIT/Apache-2.0"
repository = "https://github.com/rustls/rustls-cng"
documentation = "https://docs.rs/rustls-cng"
readme = "README.md"
keywords = ["cng", "tls", "rustls", "windows"]
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
no-default-features = true

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["std"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustls-pki-types = "1"

[features]
default = ["logging", "tls12", "aws-lc-rs"]
aws-lc-rs = ["rustls/aws_lc_rs"]
early-data = []
fips = ["rustls/fips"]
logging = ["rustls/logging"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]
